--- a/src/app/home/schema-utils/integration/integration.component.html
+++ b/src/app/home/schema-utils/integration/integration.component.html
@@ -540,7 +540,7 @@
                                     <input *ngIf="edit.status" class="form-control" type="text"
                                         placeholder="Enter a name for the hook" [ngbTypeahead]="searchFunction"
                                         [resultFormatter]="formatter" [inputFormatter]="formatter"
-                                        (selectItem)="selectFunction($event)">
+                                        (selectItem)="selectFunction($event)" formControlName="_func">
                                 </div>
                             </div>
                             <div class="d-flex w-100 mb-4">
