default value for list of values number

--- a/src/app/utils/structure-field-properties/number-property/number-property.component.html
+++ b/src/app/utils/structure-field-properties/number-property/number-property.component.html
@@ -13,6 +13,7 @@
           <div class="value-width" *ngIf=" form.get('properties._detailedType').value === 'enum'">
             <select class="form-control" formControlName="default" id="_currency"
               (change)="setEnumValue(form.get('properties'))">
+              <option [value]=null selected>Select Value</option>
               <option id="_relationAttr" *ngFor="let attr of form.get('properties.enum').value" [value]="attr">{{attr}}
               </option>
             </select>
