--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -21,6 +21,19 @@
             </button>
             <div class="btn-group mr-3" *ngIf="edit.status">
                 <button class="btn btn-primary btn-min-width" (click)="saveDummyCode();" type="button">Save</button>
+                <div *ngIf="faasData?.draftVersion || faasData.status=='Draft'" ngbDropdown class="btn-group">
+                    <button class="btn btn-primary dropdown-toggle-split" ngbDropdownToggle type="button"></button>
+                    <div  ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                        <button *ngIf="faasData?.draftVersion || faasData.status=='Draft'" ngbDropdownItem
+                            (click)="discardDraft()" type="button">Discard
+                            Draft</button>
+                    </div>
+                </div>
+            </div>
+            <button *ngIf="edit.status" class="btn btn-dark btn-min-width" [disabled]="!isValidSchema"
+                (click)="save(true);edit.status=false" type="button">Save &amp; Deploy</button>
+            <!-- <div class="btn-group mr-3" *ngIf="edit.status">
+                <button class="btn btn-primary btn-min-width" (click)="saveDummyCode();" type="button">Save</button>
                 <div ngbDropdown class="btn-group">
                     <button class="btn btn-primary dropdown-toggle-split" ngbDropdownToggle type="button"></button>
                     <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
@@ -30,7 +43,7 @@
                             Draft</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- <button *ngIf="edit.status" (click)="saveDummyCode();" type="button"
                 class="edit-button btn btn-min-width btn-primary" id="saveBtn">
                 <span class="fa fa-save mr-2"></span>
