--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -129,7 +129,7 @@
                         <span>Libraries</span>
                     </ng-template>
                     <ng-template ngbPanelContent>
-                        <table class="table table-bordered">
+                        <table class="table table-bordered env-vars">
                             <thead>
                                 <tr class="thead-light">
                                     <th>Library Name</th>
@@ -175,11 +175,11 @@
                         <span>ENV Variables</span>
                     </ng-template>
                     <ng-template ngbPanelContent>
-                        <table class="table table-bordered">
+                        <table class="table table-bordered env-vars">
                             <thead>
                                 <tr class="thead-light">
                                     <th>ENV Variable</th>
-                                    <th>Default Value</th>
+                                    <th>Value</th>
                                     <!-- <th>Description</th> -->
                                 </tr>
                             </thead>
@@ -206,7 +206,7 @@
                         </table>
                     </ng-template>
                 </ngb-panel>
-                <ngb-panel>
+                <!-- <ngb-panel>
                     <ng-template ngbPanelTitle>
                         <span>Examples</span>
                     </ng-template>
@@ -223,7 +223,7 @@
                         of them accusamus
                         labore sustainable VHS.
                     </ng-template>
-                </ngb-panel>
+                </ngb-panel> -->
             </ngb-accordion>
         </div>
     </div>
