--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -53,7 +53,7 @@
         </div>
         <label for="apiEndpoint" class="font-sm text-secondary mt-3">API Endpoint</label>
         <div class="name-wrapper position-relative">
-          <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/fass/" formControlName="api">
+          <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/faas/" formControlName="api">
         </div>
         <label for="description" class="font-sm text-secondary mt-3">Description</label>
         <div class="name-wrapper position-relative">
