--- a/src/app/home/faas/faas-manage/faas-manage.component.scss
+++ b/src/app/home/faas/faas-manage/faas-manage.component.scss
@@ -27,3 +27,14 @@
   font-size: 10px;
   overflow: auto;
 }
+
+.console {
+  height: calc(100vh - 230px) !important;
+  width: 600px !important;
+  right: -600px;
+  z-index: 2;
+  transition: 0.2s;
+  &.show {
+    right: 0;
+  }
+}
