--- a/src/app/home/schema-utils/configuration/configuration.component.html
+++ b/src/app/home/schema-utils/configuration/configuration.component.html
@@ -454,7 +454,7 @@
           having Collections).
         </div>
       </div>
-      <div class="d-flex flex-column w-100" *ngIf="canView('SPR')">
+      <!-- <div class="d-flex flex-column w-100" *ngIf="canView('SPR')">
         <span class="font-weight-bold mt-3 mb-2">Allowed File Types</span>
         <div class="d-flex flex-wrap">
           <label
@@ -471,7 +471,7 @@
           </label>
         </div>
         <div class="d-flex flex-column w-100 px-3"></div>
-      </div>
+      </div> -->
       <div class="d-flex flex-column w-100" *ngIf="canView('SPR')">
         <span class="font-weight-bold mt-3 mb-2">Properties</span>
         <table class="table">
