--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -11,7 +11,7 @@
             <!-- <button class="btn btn-link text-danger mr-3" (click)="deleteApp()">Delete App</button> -->
             <button class="btn btn-dark" [ngClass]="{'text-white':changesDone}" [disabled]="!changesDone || isInvalid"
                 (click)="save()">
-                Save Changes
+                Save
             </button>
         </odp-basic-info>
         <div class="d-flex flex-column p-3">
