--- a/src/app/home/schema-utils/configuration/configuration.component.html
+++ b/src/app/home/schema-utils/configuration/configuration.component.html
@@ -1,7 +1,7 @@
 <div class="configuration d-flex flex-column w-100" [formGroup]="form">
   <div class="d-flex p-3 builder-body">
     <div class="">
-      <div class="d-flex flex-column w-100">
+      <!-- <div class="d-flex flex-column w-100">
         <span class="font-weight-bold mb-3">About this Data Service</span>
         <div class="d-flex w-100 pr-5">
           <div class="position-relative w-100">
@@ -38,8 +38,8 @@
             ></span>
           </div>
         </div>
-      </div>
-      <div class="d-flex w-100 mt-3" *ngIf="canView('SDH') || canView('SPD')">
+      </div> -->
+      <div class="d-flex w-100" *ngIf="canView('SDH') || canView('SPD')">
         <div class="d-flex flex-column w-50">
           <span class="font-weight-bold">Data Settings</span>
           <span class="text-accent my-2"
