--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -609,6 +609,20 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="d-flex mt-3">
+                                        <div class="text-secondary option-label">
+                                            Disable Insights
+                                        </div>
+                                        <div class="switch-container d-flex align-items-center justify-content-center">
+                                            <label class="switch accent mb-0 mr-2">
+                                                <input type="checkbox" [(ngModel)]="appData.disableInsights"
+                                                    [ngModelOptions]="{standalone: true}">
+                                                <span class="slider"></span>
+                                                <span class="toggler"></span>
+                                            </label>
+                                            <span class="text">{{ appData?.disableInsights ? 'Yes' : 'No'}}</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="bg-light rounded p-4 mt-2 ml-auto w-100">
@@ -629,23 +643,6 @@
                                         </div>
                                     </div>
                                 </div> -->
-                                <div class="d-flex  w-100 flex-column border rounded p-3 bg-white mt-1">
-                                    <div class="d-flex ">
-                                        <div class="text-secondary option-label">
-                                            Disable Insights
-                                        </div>
-                                        <div class="switch-container d-flex align-items-center justify-content-center">
-
-                                            <label class="switch accent mb-0 mr-2">
-                                                <input type="checkbox" [(ngModel)]="appData.disableInsights"
-                                                    [ngModelOptions]="{standalone: true}">
-                                                <span class="slider"></span>
-                                                <span class="toggler"></span>
-                                            </label>
-                                            <span class="text">{{ appData?.disableInsights ? 'Yes' : 'No'}}</span>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="d-flex  w-100 flex-column border rounded p-3 bg-white mt-1">
                                     <div class="d-flex align-items-center">
                                         <div class="text-secondary option-label">
