view members in grp basic permission

--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members.component.html
@@ -57,7 +57,8 @@
           hasPermission('PMGMUD') ||
           hasPermission('PMGMUC') ||
           hasPermission('PVGMUD') ||
-          hasPermission('PVGMUC')
+          hasPermission('PVGMUC') ||
+          hasPermission('PVGB')
         "
       >
         <ag-grid-angular
