--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -58,10 +58,10 @@
     </odp-basic-info>
     <div class="border-top border-bottom px-3 py-2 d-flex align-items-center justify-content-between bg-light">
         <div class="url-info d-flex align-items-center">
-            <button type="button" class="btn btn-dark btn-sm mr-3" (click)="testRun()">
+            <!-- <button type="button" class="btn btn-dark btn-sm mr-3" (click)="testRun()">
                 <span class="fa fa-flask mr-2"></span>
                 <span>Test</span>
-            </button>
+            </button> -->
             <span class="label text-dark font-weight-bold mr-2">API Endpoint&nbsp;:</span>
             <span class="url text-accent">{{faasData.url || 'N.A.'}}</span>
         </div>
