--- a/src/app/utils/structure-field-properties/number-property/number-property.component.html
+++ b/src/app/utils/structure-field-properties/number-property/number-property.component.html
@@ -60,13 +60,18 @@
     <div class="label-width text-secondary">Values</div>
     <div class="value-width position-relative">
       <ng-container *ngIf="edit.status">
-        <input class="form-control pr-4" (paste)="pasteOnList($event,'enum','number')"
+        <input class="form-control pr-4" (paste)="pasteOnList($event,'enum','number')" [ngClass]="{'is-invalid' : form.get('properties.enum').hasError('emptyEnum') }"
           (keyup.enter)="listEnterKey($event,'enum')" type="number" formControlName="_listInput" id="_numberLovInput">
         <button type="button" class="list-add-button btn btn-link hover position-absolute p-0"
           [disabled]="form.get('properties._listInput').value===''" (click)="addToList('enum')">
           <span class="fa fa-plus text-primary"></span>
         </button>
       </ng-container>
+      <div *ngIf="form.get('properties.enum').hasError('emptyEnum')">
+        <span class="text-danger">
+          Values cannot be empty
+        </span>
+      </div>
     </div>
   </div>
   <div class="d-flex flex-column w-100 mb-4"
