--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/user-group-author.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/user-group-author.component.html
@@ -42,12 +42,12 @@
 
         </div> -->
         <div class="border-top"></div>
-        <div *ngIf="hasPermission('PVGABM') || hasPermission('PMGABM')" class="d-flex py-2 w-100 pl-3 hover justify-content-between"
+        <!-- <div *ngIf="hasPermission('PVGABM') || hasPermission('PMGABM')" class="d-flex py-2 w-100 pl-3 hover justify-content-between"
           [ngClass]="{'bg-border': activeSubTab==6}" (click)="activeSubTab=6">
           <span class="">Bookmarks</span>
           <span class="odp-angle-right font-sm px-2 pt-1" *ngIf=" activeSubTab==6"></span>
 
-        </div>
+        </div> -->
         <div *ngIf="hasPermission('PVGAU') || hasPermission('PMGAU')" class="d-flex py-2 w-100 pl-3 hover justify-content-between"
           [ngClass]="{'bg-border': activeSubTab==7}" (click)="activeSubTab=7">
           <span class="">Users</span>
