--- a/src/app/home/schema-builder/schema-builder.component.scss
+++ b/src/app/home/schema-builder/schema-builder.component.scss
@@ -42,6 +42,11 @@
     min-height: 40px;
     max-height: 40px;
   }
+
+  #experience-side-nav{
+    width: 175px;
+    border-right: 1px solid #DBDBDB;
+  }
 }
 
 .add-attribute {
