--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -9,10 +9,16 @@
   <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3">
     <div class="font-weight-bold font-lg">List of Data Services</div>
     <odp-search-box (enteredText)="search($event)" (reset)="resetSearch();getServices();"></odp-search-box>
-    <button class="add-new btn-min-width btn btn-primary" (click)="newService()" *ngIf="hasCreatePermission('SM')">
-      <span class="fa fa-plus mr-2"></span>
-      <span class="text">New Data Service</span>
-    </button>
+    <div class="d-flex align-items-center">
+      <button class="add-new btn-min-width btn btn-dark" (click)="transactionDoc()">
+        <span class="fa fa-link mr-2"></span>
+        <span class="text">Transaction Doc</span>
+      </button>
+      <button class="add-new btn-min-width btn btn-primary" (click)="newService()" *ngIf="hasCreatePermission('SM')">
+        <span class="fa fa-plus mr-2"></span>
+        <span class="text">New Data Service</span>
+      </button>
+    </div>
   </div>
   <div class="d-flex flex-column w-100 pl-3">
     <div class="card-container pt-3" (scroll)="loadMore($event)">
