--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -10,7 +10,7 @@
     <div class="font-weight-bold font-lg">List of Data Services</div>
     <odp-search-box (enteredText)="search($event)" (reset)="resetSearch();getServices();"></odp-search-box>
     <div class="d-flex align-items-center">
-      <button class="add-new btn-min-width btn btn-dark" (click)="transactionDoc()">
+      <button class="add-new btn-min-width btn btn-dark mr-3" (click)="transactionDoc()">
         <span class="fa fa-link mr-2"></span>
         <span class="text">Transaction Doc</span>
       </button>
